# camera-vhal

./: Android.mk  README.md
.github/workflows/: run_ci_checks.yaml
Gtest/: Android.mk  CameraClient.cpp  CameraClient.h  CameraFixture.cpp  CameraFixture.h  main.cpp
host_camera_client/: CMakeLists.txt  clang.toolchain.cmake
host_camera_client/src/: assert.c  assert.h  camera-capture-linux.c  camera-capture.h  camera-common.h  camera-format-converters.c  camera-format-converters.h  camera-service.c  camera-service.h  compiler.h  debug.c  debug.h  eintr_wrapper.c  eintr_wrapper.h  hw-remote.c  hw-remote.h  misc.c  misc.h  panic.c  panic.h  stralloc.c  stralloc.h  system.c  system.h
include/: Alignment.h  CGCodec.h  CGLog.h  CallbackNotifier.h  CameraSocketCommand.h  CameraSocketServerThread.h  CapabilitiesHelper.h  ClientCommunicator.h  ConnectionsListener.h  Converters.h  Exif.h  GrallocModule.h  NV21JpegCompressor.h  Thumbnail.h  VirtualBaseCamera.h  VirtualBuffer.h  VirtualCamera3.h  VirtualCameraCommon.h  VirtualCameraFactory.h  VirtualFakeCamera3.h
include/fake-pipeline2/: Base.h  JpegCompressor.h  Scene.h  Sensor.h
include/jpeg-stub/: Compressor.h
include/onevpl-video-decode/: MfxDecoder.h  (+1 more)
src/: CGCodec.cpp  CameraSocketCommand.cpp  CameraSocketServerThread.cpp  CapabilitiesHelper.cpp  ClientCommunicator.cpp  ConnectionsListener.cpp  Converters.cpp  Exif.cpp  NV21JpegCompressor.cpp  Thumbnail.cpp  VirtualBaseCamera.cpp  VirtualCamera3.cpp  VirtualCameraFactory.cpp  VirtualCameraHal.cpp  VirtualFakeCamera3.cpp
virtualcamera/: .clang-format
(+26 files in other folders)
